Major bugfix for scrolling on smaller viewports

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -383,10 +383,7 @@ h2 {
     border: 4px solid var(--color-primary);
     border-radius: 20px;
     color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: block;
     left: 50%;
     padding: 20px;
     position: fixed;
@@ -394,7 +391,7 @@ h2 {
     transform: translate(-50%, -50%);
     width: max-content;
     z-index: 1;
-    max-height: 100vh;
+    max-height: 70vh;
     overflow-y: auto;
 }
 
